<resources>
    <string name="app_name">MislugaresUxiaRCApp</string>

    <string name="accion_mostrar">Mostrar</string>
    <string name="accion_preferencias">Preferencias</string>
    <string name="accion_acerca_de">Acerca de</string>
    <string name="accion_salir">Salir</string>
    <string name="etacercade">APLICACIÓN MIS LUGARES:Hola soy Uxia Rodriguez.Este programa ha sido desarrollado como ejemplo para demostrar cómo se pueden lanzar nuevas actividades desde la actividad principal.</string>
    <string name="Preferencias_menu">Preferencias</string>
    <string name="acercade_menu">Acerca de...</string>
    <string name="config_menu">Configuracion</string>
    <string name="tv_direccion">Direccion</string>
    <string name="tv_telefono">Telefono</string>
    <string name="tv_direccionURI">Direccion URI</string>
    <string name="tv_comentario">Comentario</string>
    <string name="tv_fecha">Fecha</string>
    <string name="tv_hora">Hora</string>
    <string name="comollegar">Como llegar</string>
    <string name="editar">Editar</string>
    <string name="borrar">Borrar</string>
    <string name="tv_tipolugar">Tipo Lugar</string>
    <string name="tv_nombresdelugar">Nombre del lugar</string>
    <string name="algoqueidentifiquetb">algo que identifique el lugar</string>
    <string name="direcionlugartb">dirección del lugar</string>
    <string name="paginawebtb">página web</string>
    <string name="introducetusnotastb">introduce tus notas</string>
</resources>
