<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/accion_compartir"
        android:title="compartir"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="10"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/accion_llegar"
        android:icon="@android:drawable/ic_menu_directions"
        android:orderInCategory="20"
        android:title="@string/comollegar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/accion_editar"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="30"
        android:title="@string/editar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/accion_borrar"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="40"
        android:title="@string/borrar"
        app:showAsAction="ifRoom" />
</menu>
